# netology

./: .gitmodules  README.md
Aiohttp/: .env  Dockerfile  app.py  docker-compose.yml  main.py  models.py  requirements.txt  views.py
Decorators/: README.md  decorator1.py  decorator2.py  phonebook.xlsx  regexp_full_logger.py
Docker/Task1/: Dockerfile
Docker_compose/nginx/: nginx.conf
Docker_compose/stocks_products/: Dockerfile  docker-compose.yml  requirements.txt
Iterators/: README.md  flat_generator.py  flat_generator2.py  flat_iterator.py  flat_iterator2.py
Stack/: README.md  main.py
Stack/code_refactoring/: README(v1).md  README(v2).md  v1.py  v2.py
TestAPI/: README.md  test_api.py
Tests/: README.md
Tests/Unit_test_selenium/: README.md  autorization.py
Tests/Unittest/: README.md  (+1 more)
Unittest/: documents_app.py
Web-scrapping/: README.md  additional_task.py  main_task.py
asyncio/: load_data.py  migration.py
bus_stops_project/: manage.py
fastapi_advertisements/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
fastapi_advertisements_p2/: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
fastapi_advertisements_p2/src/: main.py  secret_key.py
fastapi_advertisements_p2/tests/: conftest.py  test_auth_and_routes.py
flask/: README.md  app1.py  app2.py
image_upscaler_service/: .gitignore  Dockerfile.celery  Dockerfile.web  app.py  celery_config.py  requirements.txt  send_request.py  tasks.py  upscale.py
orm_migrations/: school.json
regexp/: README.md
(+100 files in other folders)
